--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -25,9 +25,8 @@
         padding: 100px;
 
         h1 {
-            width: 600px;
+            width: 644px;
             height: 66px;
-            /* margin: 157px 88px 8px 153px; */
             font-family: BYekan;
             font-size: 35px;
             line-height: 1.51;
@@ -36,7 +35,7 @@
         }
 
         h3 {
-            width: 610px;
+            width: 425px;
             height: 40px;
             /* margin: 8px 91px 30px 140px; */
             font-family: BYekan;
@@ -47,31 +46,17 @@
             margin: 5px;
         }
 
-        .selectBox {
-            width: 650px;
-            height: 62px;
-            /* margin: 30px 82px 25px 109px; */
-            padding: 11px 20px 11px 12px;
-            border-radius: 14px;
-            border: solid 1px rgba(112, 112, 112, 0.39);
-            background-color: #fff;
-            margin: 10px 0 10px 10px;
-        }
-
         .companyLogos {
             display: flex;
-            justify-content: space-around;
-            width: 98%;
+            justify-content: space-between;
+            width: 100%;
 
-            .companyLogo {
-                width: 60px;
-                height: 59px;
-                /* margin: 25px 88px 136px 22px; */
-                border-radius: 20px;
-                border: solid 1px rgba(112, 112, 112, 0.39);
-                background-color: #fff;
-                /* margin: 2px; */
-            }
+            // .companyLogo {
+            //     width: 93px;
+            //     height: 30px;
+            //     object-fit: contain;
+            //     border: solid 1px rgba(112, 112, 112, 0.2);
+            // }
         }
     }
 }
