change style of button in navbar

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -19,6 +19,10 @@
         background-color: #ffa81f;
         display: flex;
         justify-content: center;
+
+        .Button--left-H-line {
+            border-left: 2px solid #fff;
+        }
     }
 
     .Navbar__logo {
