--- a/src/components/box/Box.scss
+++ b/src/components/box/Box.scss
@@ -1,4 +1,4 @@
-.selectBox {
+.Box {
     width: 850px;
     height: 62px;
     padding: 11px 20px 11px 12px;
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center;
 
-    .selectBox__btn {
+    .Box__btn {
         display: flex;
         justify-content: center;
         width: 40px;
