--- a/src/components/recruitmentBreif/RecruitmentBreif.scss
+++ b/src/components/recruitmentBreif/RecruitmentBreif.scss
@@ -6,14 +6,25 @@
     border-radius: 15px;
     border: solid 1px rgba(112, 112, 112, 0.25);
     background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 
-    .bookmark-icon {
-        width: 24px;
-        height: 24px;
-        object-fit: contain;
+    .RecruitmentBreif--bookmark-icon {
+        display: flex;
+        justify-content: flex-start;
+        width: 100%;
+
+        .bookmark-icon {
+            width: 24px;
+            height: 24px;
+            object-fit: contain;
+        }
     }
 
-    .corporate-icon {
+    .corporate-icon,
+    .location-icon {
         width: 25px;
         height: 20px;
         object-fit: contain;
@@ -28,5 +39,29 @@
         line-height: 1.42;
         text-align: right;
         color: #4166b7;
+    }
+
+    .time-span {
+        width: 65px;
+        height: 20px;
+        font-family: BYekan;
+        font-size: 14px;
+        line-height: 1.43;
+        color: #33334c;
+        margin: 0 !important;
+    }
+
+    .RecruitmentBreif--text {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: flex-start;
+        width: 100%;
+        h4,
+        h6 {
+            display: flex;
+            justify-content: flex-end;
+            width: 100%;
+        }
     }
 }
