--- a/src/pages/jobs.css
+++ b/src/pages/jobs.css
@@ -3,6 +3,13 @@
   height: 59px;
   margin: 5px 0 12px 22px;
   border: solid 1px #707070;
+  border-radius: 18px;
+  padding: 7px 0 7px 0;
+}
+.company-logo__image {
+  width: 100%;
+  height: 96%;
+  border-radius: 5px;
 }
 
 /*# sourceMappingURL=jobs.css.map */
