--- a/src/pages/jobs.scss
+++ b/src/pages/jobs.scss
@@ -1,10 +1,13 @@
-
-.job-card{
-
-}
 .company-logo{
   width: 60px;
   height: 59px;
   margin: 5px 0 12px 22px;
   border: solid 1px #707070;
+  border-radius: 18px;
+  padding: 7px 0 7px 0;
+  &__image{
+    width : 100%;
+    height:96%;
+    border-radius: 5px;
+  }
 }
