--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -24,6 +24,16 @@
         align-items: flex-end;
         padding: 100px;
 
+        .Box {
+            width: 650px;
+            height: 62px;
+            padding: 11px 20px 11px 12px;
+            border-radius: 14px;
+            border: solid 1px rgba(112, 112, 112, 0.39);
+            background-color: #fff;
+            margin: 10px 0 10px 10px;
+        }
+
         h1 {
             width: 644px;
             height: 66px;
