--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -70,3 +70,13 @@
         }
     }
 }
+
+.Box {
+    width: 100%;
+    height: 100%;
+    padding: 11px 20px 11px 12px;
+    // border-radius: 14px;
+    // border: solid 1px rgba(112, 112, 112, 0.39);
+    // background-color: #fff;
+    // margin: 10px 0 10px 10px;
+}
