--- a/src/components/box/Box.scss
+++ b/src/components/box/Box.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
 
-    .Box__btn {
+    &__btn {
         display: flex;
         justify-content: center;
         width: 40px;
