complete avatar component

--- a/src/pages/profile/avatar.module.scss
+++ b/src/pages/profile/avatar.module.scss
@@ -3,6 +3,7 @@
   height: 275px;
   padding: 48px 700px 46.6px 700px;
   background-color: #f0f0f0;
+  margin-bottom: 20px;
   &__avatar{
     width: 130.5px;
     height: 130.5px;
