fix recaptcha and contact us

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -25,8 +25,14 @@
         }
     }
 
-    .Navbar__logo {
-        width: 98.8px;
-        height: 40.2px;
+    .containerLogo {
+        width:20%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        .Navbar__logo {
+            width: 98.8px;
+            height: 40.2px;
+        }
     }
 }
